@@ -1,3 +1,9 @@
+2007-01-19: Jason Long <jlong@messiah.edu>
+ * lib/Mail/DKIM/Verifier.pm: in case of unsupported algorithm,
+   canonicalization method, or key protocol, list the bad protocol
+   in the error message to make diagnosing easier
+ * lib/Mail/DKIM/DkSignature.pm: fix a use-of-undefined-scalar bug
+
 2007-01-17: Jason Long <jlong@messiah.edu>
  * t/verifier.t: fixed testing bug that was too strict about what
    error message OpenSSL generates
